@@ -42,13 +42,6 @@ if [[ "`tty`" != "not a tty" ]]; then
     have_tty=1
 fi
 
-# Bugzilla 37848: When no TTY is available, don't output to console
-have_tty=0
-# shellcheck disable=SC2006
-if [[ "`tty`" != "not a tty" ]]; then
-    have_tty=1
-fi
-
  # Only use colors if connected to a terminal
 if [[ ${have_tty} -eq 1 ]]; then
   PRIMARY=$(printf '\033[38;5;082m')
@@ -241,23 +234,25 @@ if [ "$USE_NOHUP" = "true" ]; then
   NOHUP="nohup"
 fi
 
-
 PARAM_CLI="org.apache.streampark.flink.core.conf.ParameterCli"
 
 APP_MAIN="org.apache.streampark.console.StreamParkConsoleBootstrap"
 
-DEFAULT_OPTS="""
-  -ea
-  -server
-  -Xms1024m
-  -Xmx1024m
-  -Xmn256m
-  -XX:NewSize=100m
-  -XX:+UseConcMarkSweepGC
-  -XX:CMSInitiatingOccupancyFraction=70
-  -Xloggc:${APP_HOME}/logs/gc.log
-  """
+JVM_OPTS_FILE=${APP_HOME}/bin/jvm_opts.sh
 
+JVM_ARGS="-server"
+if [ -f $JVM_OPTS_FILE ]; then
+  while read line
+  do
+      if [[ "$line" == -* ]]; then
+        JVM_ARGS="${JVM_ARGS} $line"
+      fi
+  done < $JVM_OPTS_FILE
+fi
+
+JVM_OPTS=${JVM_OPTS:-"${JVM_ARGS}"}
+JVM_OPTS="$JVM_OPTS -XX:HeapDumpPath=${APP_HOME}/logs/dump.hprof"
+JVM_OPTS="$JVM_OPTS -Xloggc:${APP_HOME}/logs/gc.log"
 DEBUG_OPTS=""
 
 # ----- Execute The Requested Command -----------------------------------------
@@ -417,13 +412,12 @@ start() {
 
   # shellcheck disable=SC2034
   # shellcheck disable=SC2006
-  local vmOption=`$_RUNJAVA -cp "$APP_CLASSPATH" $PARAM_CLI --vmopt`
+  # shellcheck disable=SC2155
+  local ADD_OPENS=`$_RUNJAVA -cp "$APP_CLASSPATH" $PARAM_CLI --vmopt`
 
-  local JAVA_OPTS="""
-  $vmOption
-  $DEFAULT_OPTS
-  $DEBUG_OPTS
-  """
+  local JAVA_OPTS="$ADD_OPENS $JVM_OPTS $DEBUG_OPTS"
+
+  echo_g "JAVA_OPTS:  ${JAVA_OPTS}"
 
   eval $NOHUP $_RUNJAVA $JAVA_OPTS \
     -classpath "$APP_CLASSPATH" \
@@ -498,13 +492,14 @@ start_docker() {
 
   # shellcheck disable=SC2034
   # shellcheck disable=SC2006
-  local vmOption=`$_RUNJAVA -cp "$APP_CLASSPATH" $PARAM_CLI --vmopt`
+  # shellcheck disable=SC2155
+  local ADD_OPENS=`$_RUNJAVA -cp "$APP_CLASSPATH" $PARAM_CLI --vmopt`
 
-  local JAVA_OPTS="""
-    $vmOption
-    $DEFAULT_OPTS
-    $DEBUG_OPTS
-    """
+  JVM_OPTS="${JVM_OPTS} -XX:-UseContainerSupport"
+
+  local JAVA_OPTS="$ADD_OPENS $JVM_OPTS $DEBUG_OPTS"
+
+  echo_g "JAVA_OPTS:  ${JAVA_OPTS}"
 
   $_RUNJAVA $JAVA_OPTS \
     -classpath "$APP_CLASSPATH" \
